Fix jumping bug dropdown onClick

--- a/frontend/components/forms/fields/Dropdown/_styles.scss
+++ b/frontend/components/forms/fields/Dropdown/_styles.scss
@@ -117,7 +117,7 @@
       content: url("../assets/images/icon-collapse-black-16x16@2x.png");
       height: 16px;
       width: 16px;
-      margin-top: 11px;
+      margin-top: 6px;
       margin-left: -3px;
       border: none;
 
